--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.h2.console.enabled=true
 
 spring.h2.console.path=/console
 
+
+spring.datasource.url=jdbc:h2:mem:testdb
 #allows us to bring in data from an external sql resource to add to the database.
 spring.datasource.platform=h2 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.mvc.hiddenmethod.filter.enabled: true
