--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/console
 
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:~/Users/sherdaunicorn/Desktop/BlogSpringBoot
 #allows us to bring in data from an external sql resource to add to the database.
 spring.datasource.platform=h2 
 spring.mvc.hiddenmethod.filter.enabled: true
+spring.jpa.hibernate.ddl-auto = update
