--- a/pom.xml
+++ b/pom.xml
@@ -47,19 +47,19 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>3.3.7</version>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>bootstrap</artifactId>
+   			<version>5.1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>boot-strap-datepicker</artifactId>
-			<version>1.0.1</version>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>bootstrap-datepicker</artifactId>
+    		<version>1.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery</artifactId>
-			<version>1.0.1</version>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>jquery</artifactId>
+    		<version>3.6.0</version>
 		</dependency>
 	</dependencies>
 
